# galactic_dynamics_interoperability

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
src/galactic_dynamics_interop/: __init__.py  _core.py
src/galactic_dynamics_interoperability/: __init__.py  _base.py  _core.py
src/galactic_dynamics_interoperability/_agama/: __init__.py
src/galactic_dynamics_interoperability/_gala/: __init__.py
src/galactic_dynamics_interoperability/_galax/: __init__.py
src/galactic_dynamics_interoperability/_galpy/: __init__.py
tests/: test_package.py
